--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "devDependencies": {
     "@types/eslint": "^8",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-unicorn": "^51.0.1",
-    "prettier": "^3.2.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+    "prettier": "^3",
+    "typescript": "5.4.2",
+    "vite": "^5.2.7"
+  },
+  "packageManager": "yarn@4.1.1"
 }
