--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "experimental",
+    "react-dom": "experimental"
   },
   "devDependencies": {
     "@types/eslint": "^8",
@@ -22,7 +22,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "experimental",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-unicorn": "^51.0.1",
     "prettier": "^3",
